src/test/ui/or-patterns/remove-leading-vert.stderr
error: a leading `|` is not allowed in a parameter pattern
  --> $DIR/remove-leading-vert.rs:12:14
   |
LL |     fn fun1( | A: E) {}
   |              ^ If I were you, I would simply remove the `|`

error: a leading `|` is not allowed in a parameter pattern
  --> $DIR/remove-leading-vert.rs:13:14
   |
LL |     fn fun2( || A: E) {}
   |              ^^ If I were you, I would simply remove the `||`
   |
   = note: alternatives in or-patterns are separated with `|`, not `||`

error: a leading `|` is only allowed in a top-level pattern
  --> $DIR/remove-leading-vert.rs:14:11
   |
LL |     let ( | A): E;
   |           ^ If I were you, I would simply remove the `|`

error: a leading `|` is only allowed in a top-level pattern
  --> $DIR/remove-leading-vert.rs:15:11
   |
LL |     let ( || A): (E);
   |           ^^ If I were you, I would simply remove the `||`
   |
   = note: alternatives in or-patterns are separated with `|`, not `||`

error: a leading `|` is only allowed in a top-level pattern
  --> $DIR/remove-leading-vert.rs:16:11
   |
LL |     let ( | A,): (E,);
   |           ^ If I were you, I would simply remove the `|`

error: a leading `|` is only allowed in a top-level pattern
  --> $DIR/remove-leading-vert.rs:17:11
   |
LL |     let [ | A ]: [E; 1];
   |           ^ If I were you, I would simply remove the `|`

error: a leading `|` is only allowed in a top-level pattern
  --> $DIR/remove-leading-vert.rs:18:11
   |
LL |     let [ || A ]: [E; 1];
   |           ^^ If I were you, I would simply remove the `||`
   |
   = note: alternatives in or-patterns are separated with `|`, not `||`

error: a leading `|` is only allowed in a top-level pattern
  --> $DIR/remove-leading-vert.rs:19:13
   |
LL |     let TS( | A ): TS;
   |             ^ If I were you, I would simply remove the `|`

error: a leading `|` is only allowed in a top-level pattern
  --> $DIR/remove-leading-vert.rs:20:13
   |
LL |     let TS( || A ): TS;
   |             ^^ If I were you, I would simply remove the `||`
   |
   = note: alternatives in or-patterns are separated with `|`, not `||`

error: a leading `|` is only allowed in a top-level pattern
  --> $DIR/remove-leading-vert.rs:21:17
   |
LL |     let NS { f: | A }: NS;
   |                 ^ If I were you, I would simply remove the `|`

error: a leading `|` is only allowed in a top-level pattern
  --> $DIR/remove-leading-vert.rs:22:17
   |
LL |     let NS { f: || A }: NS;
   |                 ^^ If I were you, I would simply remove the `||`
   |
   = note: alternatives in or-patterns are separated with `|`, not `||`

error: a trailing `|` is not allowed in an or-pattern
  --> $DIR/remove-leading-vert.rs:27:13
   |
LL |     let ( A | ): E;
   |           - ^ If I were you, I would simply remove the `|`
   |           |
   |           while parsing this or-pattern starting here

error: a trailing `|` is not allowed in an or-pattern
  --> $DIR/remove-leading-vert.rs:28:12
   |
LL |     let (a |,): (E,);
   |          - ^ If I were you, I would simply remove the `|`
   |          |
   |          while parsing this or-pattern starting here

error: a trailing `|` is not allowed in an or-pattern
  --> $DIR/remove-leading-vert.rs:29:17
   |
LL |     let ( A | B | ): E;
   |           -     ^ If I were you, I would simply remove the `|`
   |           |
   |           while parsing this or-pattern starting here

error: a trailing `|` is not allowed in an or-pattern
  --> $DIR/remove-leading-vert.rs:30:17
   |
LL |     let [ A | B | ]: [E; 1];
   |           -     ^ If I were you, I would simply remove the `|`
   |           |
   |           while parsing this or-pattern starting here

error: a trailing `|` is not allowed in an or-pattern
  --> $DIR/remove-leading-vert.rs:31:18
   |
LL |     let S { f: B | };
   |                - ^ If I were you, I would simply remove the `|`
   |                |
   |                while parsing this or-pattern starting here

error: unexpected token `||` after pattern
  --> $DIR/remove-leading-vert.rs:32:13
   |
LL |     let ( A || B | ): E;
   |           - ^^ If I were you, I would simply use a single `|` to separate multiple alternative patterns: `|`
   |           |
   |           while parsing this or-pattern starting here

error: a trailing `|` is not allowed in an or-pattern
  --> $DIR/remove-leading-vert.rs:32:18
   |
LL |     let ( A || B | ): E;
   |           -      ^ If I were you, I would simply remove the `|`
   |           |
   |           while parsing this or-pattern starting here

error: a trailing `|` is not allowed in an or-pattern
  --> $DIR/remove-leading-vert.rs:35:11
   |
LL |         A | => {}
   |         - ^ If I were you, I would simply remove the `|`
   |         |
   |         while parsing this or-pattern starting here

error: a trailing `|` is not allowed in an or-pattern
  --> $DIR/remove-leading-vert.rs:36:11
   |
LL |         A || => {}
   |         - ^^ If I were you, I would simply remove the `||`
   |         |
   |         while parsing this or-pattern starting here
   |
   = note: alternatives in or-patterns are separated with `|`, not `||`

error: unexpected token `||` after pattern
  --> $DIR/remove-leading-vert.rs:37:11
   |
LL |         A || B | => {}
   |         - ^^ If I were you, I would simply use a single `|` to separate multiple alternative patterns: `|`
   |         |
   |         while parsing this or-pattern starting here

error: a trailing `|` is not allowed in an or-pattern
  --> $DIR/remove-leading-vert.rs:37:16
   |
LL |         A || B | => {}
   |         -      ^ If I were you, I would simply remove the `|`
   |         |
   |         while parsing this or-pattern starting here

error: a trailing `|` is not allowed in an or-pattern
  --> $DIR/remove-leading-vert.rs:39:17
   |
LL |         | A | B | => {}
   |           -     ^ If I were you, I would simply remove the `|`
   |           |
   |           while parsing this or-pattern starting here

error: a trailing `|` is not allowed in an or-pattern
  --> $DIR/remove-leading-vert.rs:43:11
   |
LL |     let a | : u8 = 0;
   |         - ^ If I were you, I would simply remove the `|`
   |         |
   |         while parsing this or-pattern starting here

error: a trailing `|` is not allowed in an or-pattern
  --> $DIR/remove-leading-vert.rs:44:11
   |
LL |     let a | = 0;
   |         - ^ If I were you, I would simply remove the `|`
   |         |
   |         while parsing this or-pattern starting here

error: a trailing `|` is not allowed in an or-pattern
  --> $DIR/remove-leading-vert.rs:45:11
   |
LL |     let a | ;
   |         - ^ If I were you, I would simply remove the `|`
   |         |
   |         while parsing this or-pattern starting here

error: aborting due to 26 previous errors

